--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -22,6 +22,23 @@ body {
 
 #history-table {
     grid-column: 1 / 2;
+    max-height: 60vh;
+    overflow-y: scroll;
+}
+
+#history-table::-webkit-scrollbar {
+    width: 0.3rem;
+}
+ 
+#history-table::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 20px;
+}
+ 
+#history-table::-webkit-scrollbar-thumb {
+  background-color: #332e4b;
+  outline: 1px solid #332e4b;
+  border-radius: 20px;
 }
 
 #history-table #history-heading {
@@ -40,19 +57,49 @@ body {
     padding: 2% 5%;
 }
 
-#history-table {
-    display: inline-block;
-}
 
-#history-table #history-row {
+#history-table .history-row {
     padding: 2rem;
     color: #5b5183;
-    border-bottom: 0.5px solid #5b5183;
+    border-bottom: 0.5px solid #332e4b;
+}
+
+#history-table .history-row div {
+    display: inline-block;
+    width: 50%;
+    letter-spacing: 2px;
+}
+
+#history-table .history-row div h4 {
+    margin: 0;
+    font-size: 1.35rem;
+    color: #7165a1;
+}
+
+#history-table .history-row div h5 {
+    margin: 0.3rem 0;
+}
+
+#history-table .history-row .history-row-time-info {
+    margin-top: 1.3rem;
+    width: 100%;
+    text-align: center;
+}
+
+#history-table .history-row .history-row-time-info h3 {
+    margin-bottom: 0.2rem;
+    color: #4c4470;
+}
+
+#history-table .history-row .history-row-time-info h2 {
+    margin: 0;
+    color: #2DC5A1;
 }
 
 #stopwatch {
     padding: 5%;
     min-width: 20vw;
+    max-width: 20vw;
     text-align: center;
     border-left: 0.5px solid #29253d;
     position: relative;
